--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,25 +3,23 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">City Name</th>
-        <th scope="col">Latitude</th>
-        <th scope="col">Longitude</th>
-        <th scope="col">Country</th>
-        <th scope="col">Abbreviation</th>
-        <th scope="col">Capital Status</th>
-        <th scope="col">Population</th>
+        <th scope="col">Player Name</th>
+        <th scope="col">Team</th>
+        <th scope="col">Position</th>
+        <th scope="col">Height(Inch)</th>
+        <th scope="col">Weight(Lbs)</th>
+        <th scope="col">Age</th>
     </tr>
     </thead>
     <tbody>
     {% for city in cities %}
     <tr>
         <td><a href="view/{{city.id}}">{{ city.fldName }}</a></td>
-        <td>{{ city.fldLat }}</td>
-        <td>{{ city.fldLong }}</td>
-        <td>{{ city.fldCountry }}</td>
-        <td>{{ city.fldAbbreviation }}</td>
-        <td>{{ city.fldCapitalStatus }}</td>
-        <td>{{ city.fldPopulation }}</td>
+        <td>{{ name.Team }}</td>
+        <td>{{ name.Position }}</td>
+        <td>{{ name.Height_inches }}</td>
+        <td>{{ name.Weight_lbs }}</td>
+        <td>{{ name.Age }}</td>
     </tr>
     {% endfor %}
     </tbody>
