--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -1,42 +1,37 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="/cities/new" method="POST">
+<form action="/names/new" method="POST">
     <div class="row">
         <div class="col">
-            <label for="fldName">City Name</label>
-            <input id="fldName" type="text" class="form-control" placeholder="City Name" name="fldName">
+            <label for="Name">Player Name</label>
+            <input id="Name" type="text" class="form-control" placeholder="Name" name="Name">
         </div>
         <div class="col">
-            <label for="fldAbbreviation">City Abbreviation</label>
-            <input id="fldAbbreviation" t ype="text" class="form-control" placeholder="City Abbreviation"
-                   name="fldAbbreviation">
+            <label for="Team">Team</label>
+            <input id="Team" type="text" class="form-control" placeholder="Team" name="Team">
         </div>
         <div class="col">
-            <label for="fldCountry">City Country</label>
-            <input id="fldCountry" type="text" class="form-control" placeholder="City Country" name="fldCountry">
+            <label for="Position">Position</label>
+            <input id="Position" type="text" class="form-control" placeholder="Position" name="Position">
         </div>
     </div>
 
     <div class="row">
         <div class="col">
-            <label for="fldLat">City Latitude</label>
-            <input id="fldLat" type="text" class="form-control" placeholder="City Latitude" name="fldLat">
+            <label for="Height_inches">Height</label>
+            <input id="Height_inches" type="text" class="form-control" placeholder="Height" name="Height_inches">
         </div>
         <div class="col">
-            <label for="fldlong">City Longitude</label>
-            <input id="fldlong" type="text" class="form-control" placeholder="City Longitude" name="fldLong">
+            <label for="Weight_lbs">Weight</label>
+            <input id="Weight_lbs" type="text" class="form-control" placeholder="Weight" name="Weight_lbs">
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <label for="fldCapitalStatus">Capital Status</label>
+            <label for="Age">Age</label>
 
-            <input id="fldCapitalStatus" type="text" class="form-control" placeholder="Capital Status "
-                   name="fldCapitalStatus">
-        </div>
-        <div class="col">
-            <label for="fldPopulation">City Population</label>
-            <input id="fldPopulation" type="text" class="form-control" placeholder="Population" name="fldPopulation">
+            <input id="Age" type="text" class="form-control" placeholder="Age"
+                   name="Age">
         </div>
     </div>
     <button type="submit" class="btn btn-success">Success</button>
